@@ -7,6 +7,7 @@
    * `minerva/kex03`: have mission claim the crimson gauntlet to prevent unwanted spawns
    * `dvaered/gauntlet`: have mission claim the system if it can, but not fail if it can't
    * `trader/trader_escort`: player can only escort one group of traders at a time
+   * `neburesearch/neburesearch_01`: use the correct faction when complaining
    * Fixed some typos and revised writing
 
 * 0.11.3
